Tema nuevo, nuevas func

--- a/frontend-web/index.html
+++ b/frontend-web/index.html
@@ -19,11 +19,6 @@
                 <i class="fas fa-calendar-alt"></i>
                 Generador de Horarios UTB
             </h1>
-            <div class="header-actions">
-                <button id="toggle-theme" class="btn btn-secondary">
-                    <i class="fas fa-moon"></i>
-                </button>
-            </div>
         </div>
     </header>
 
@@ -109,6 +104,12 @@
                                 <p>Obtén horarios optimizados que cumplan con tus criterios</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="welcome-actions">
+                        <button id="tutorial-btn" class="btn btn-outline">
+                            <i class="fas fa-play-circle"></i>
+                            Ver Tutorial
+                        </button>
                     </div>
                 </div>
             </div>
