--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -33,10 +33,7 @@
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="icons/Icon-192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="icons/Icon-512.png" />
+    <link rel="icon" type="image/x-icon" href="favicon_utb.ico" />
 
     <title>Generador de Horarios UTB</title>
     <link rel="manifest" href="manifest.json" />
